feat: Localize application to Persian
Updates the application to use Persian language and right-to-left (RTL) directionality. This includes:
- Changing HTML lang attribute and dir attribute.
- Translating UI elements like titles, navigation items, and error messages.
- Updating the primary font to 'Sahel' for better Persian typography.
- Translating schema descriptions used by the Gemini AI service.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabriz SportZone</title>
+    <title>اسپورت‌زون تبریز</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/rastikerdar/sahel-font@v3.4.0/dist/font-face.css">
     <style>
       :root {
         --background: 240 10% 99%;
@@ -55,7 +53,7 @@
       }
       
       body {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Sahel', sans-serif;
         background-color: hsl(var(--background));
         color: hsl(var(--foreground));
       }
